<resources>
    <string name="app_name">Joy News BD</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="home">হোম</string>
    <string name="special">বিশেষ</string>
    <string name="latest">সর্বশেষ</string>
    <string name="ctg">চট্টগ্রাম</string>
    <string name="video">ভিডিও</string>

    <string name="action_settings">Settings</string>
</resources>
